--- a/config/database.yml
+++ b/config/database.yml
@@ -79,6 +79,11 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+
+staging:
+  <<: *default
+  database: first_vps_deploy_staging
+
 production:
   <<: *default
   database: first_vps_deploy_production
