--- a/config/database.yml
+++ b/config/database.yml
@@ -83,9 +83,11 @@ test:
 staging:
   <<: *default
   database: first_vps_deploy_staging
+  username: deploy
+  password: <%= ENV["FIRST_VPS_DEPLOY_DATABASE_PASSWORD"] %>
 
 production:
   <<: *default
   database: first_vps_deploy_production
-  username: first_vps_deploy
+  username: deploy
   password: <%= ENV["FIRST_VPS_DEPLOY_DATABASE_PASSWORD"] %>
